refactor code, refine UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,28 +21,28 @@
         android:theme="@style/Theme.LingoBuddy"
         tools:targetApi="31">
         <activity
-            android:name=".TestActivity"
+            android:name=".ui.TestActivity"
             android:exported="false" />
         <activity
-            android:name=".RolePlayActivity"
+            android:name=".ui.RolePlayActivity"
             android:exported="false" />
         <activity
-            android:name=".ResetPasswordActivity"
+            android:name=".ui.ResetPasswordActivity"
             android:exported="false" />
         <activity
-            android:name=".NavigationActivity"
+            android:name=".ui.NavigationActivity"
             android:exported="false" />
         <activity
-            android:name=".PronunciationActivity"
+            android:name=".ui.PronunciationActivity"
             android:exported="false" />
         <activity
-            android:name=".ImageLearningActivity"
+            android:name=".ui.ImageLearningActivity"
             android:exported="false" />
         <activity
-            android:name=".PassageQuizActivity"
+            android:name=".ui.PassageQuizActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -50,9 +50,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".ChatWithAIActivity" />
+        <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.RegisterActivity" />
+        <activity android:name=".ui.ChatWithAIActivity" />
     </application>
 
 </manifest>
